@@ -68,12 +68,12 @@ const
   ILUT_MAXTEX_WIDTH = $0630;
   ILUT_MAXTEX_HEIGHT = $0631;
   ILUT_MAXTEX_DEPTH = $0632;
-  ILUT_GL_USE_S3TC = $0634
-  ILUT_D3D_USE_DXTC = $0634
-  ILUT_GL_GEN_S3TC = $0635
-  ILUT_D3D_GEN_DXTC = $0635
-  ILUT_S3TC_FORMAT = $0705
-  ILUT_DXTC_FORMAT = $0706
+  ILUT_GL_USE_S3TC = $0634;
+  ILUT_D3D_USE_DXTC = $0634;
+  ILUT_GL_GEN_S3TC = $0635;
+  ILUT_D3D_GEN_DXTC = $0635;
+  ILUT_S3TC_FORMAT = $0705;
+  ILUT_DXTC_FORMAT = $0706;
 
 
 
